Fix desktop modal max height on small height screens

--- a/src/components/ModalPage/ModalPage.css
+++ b/src/components/ModalPage/ModalPage.css
@@ -117,6 +117,6 @@
 
 @media (max-height: 672px) {
   .ModalPage--desktop .ModalPage__in {
-    max-height: calc(100% - 32px);
+    max-height: calc(100vh - 32px);
   }
 }
